--- a/templates/admin/project-view.html
+++ b/templates/admin/project-view.html
@@ -123,7 +123,7 @@
 											<div class="task-list-container">
 												<div class="task-list-body">
 													<ul id="task-list">
-														{% for x in task_list %}
+														{% for task in task_list %}
 														<li class="task">
 															<div class="task-container">
 																<span class="task-action-btn task-check">
@@ -131,7 +131,7 @@
 																		<i class="material-icons">check</i>
 																	</span>
 																</span>
-																<span class="task-label">{{x.task_title}}</span>
+																<span class="task-label">{{task.task_title}}</span>
 																<span class="task-action-btn task-btn-right">
 																	<span class="action-circle large" title="Assign">
 																		<form action="" method="post">
