[Update] employee-list update functionality, holiday template update header, in navigation panel set active class

--- a/templates/employee/holidays_list.html
+++ b/templates/employee/holidays_list.html
@@ -12,7 +12,7 @@
 					<div class="page-header">
 						<div class="row align-items-center">
 							<div class="col">
-								<h3 class="page-title">Holidays 2024</h3>
+								<h3 class="page-title">Holidays in year {{year|date:'Y'}}</h3>
 								<ul class="breadcrumb">
 									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
 									<li class="breadcrumb-item active">Holidays</li>
