--- a/templates/interviewer_form.html
+++ b/templates/interviewer_form.html
@@ -24,10 +24,43 @@
 						<div class="col-lg-12">
 							<div class="card">
 								<div class="card-body">
-									 <form action="{% url 'AdminInterviewerForm' %}" method="" id="form" enctype="multipart/form-data">>
-										<div class="form-group row">
-											<label class="col-form-label col-md-2">Name : </label>
-											<div class="col-md-10">
+									 <form action="{% url 'AdminInterviewerForm' %}" method="" id="form" enctype="multipart/form-data">
+										<div class="row">
+											<div class="col-md-4">
+												{{form.name|as_crispy_field}}
+											</div>
+											<div class="col-md-4">
+												{{form.phone|as_crispy_field}}
+											</div>
+											<div class="col-md-4">
+												{{form.email|as_crispy_field}}
+											</div>
+											<div class="col-md-4">
+												{{form.dob|as_crispy_field}}
+											</div>
+											<div class="col-md-4">
+												{{form.gender|as_crispy_field}}
+											</div>
+											<div class="col-md-4">
+												{{form.address|as_crispy_field}}
+											</div>
+											<div class="col-md-4">
+												{{form.city|as_crispy_field}}
+											</div>
+											<div class="col-md-4">
+												{{form.state|as_crispy_field}}
+											</div>
+											<div class="col-md-4">
+												{{form.experience|as_crispy_field}}
+											</div>
+											<div class="col-md-4">
+												{{form.department|as_crispy_field}}
+											</div>
+											<div class="col-md-4">
+												{{form.technology|as_crispy_field}}
+											</div>
+											<div class="col-md-4">
+												{{form.resume|as_crispy_field}}
 											</div>
 										</div>
 										<div class="submit-section">
