--- a/templates/employee/edit_education_info.html
+++ b/templates/employee/edit_education_info.html
@@ -12,7 +12,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form action="{% url 'EmpEditEducationInfo' user_id=user.id edu_id=edit_education_info.id %}" method="post">
+                <form action="{% url 'EmpEditEducationInfo' id=user.id edu_id=edit_education_info.id %}" method="post">
                     {% csrf_token %}
                     <div class="card">
                         <div class="row">
