[ADD] add interviewer form also show data of interviewer, and also add interview queation page and show questions with answer

--- a/templates/admin/interviewer-nav.html
+++ b/templates/admin/interviewer-nav.html
@@ -4,10 +4,7 @@
     <ul class="nav nav-tabs nav-tabs-bottom nav-justified">
         {% with request.resolver_match.url_name as url_name %}
         <li class="nav-item"><a class="nav-link {% if url_name == 'AdminInterviewerDash' %}active{% endif %}" href="{% url 'AdminInterviewerDash' %}" >Dashboard</a></li>
-        <li class="nav-item"><a class="nav-link" href="user-all-jobs.html">All </a></li>
-        <li class="nav-item"><a class="nav-link" href="saved-jobs.html">Saved</a></li>
-        <li class="nav-item"><a class="nav-link" href="applied-jobs.html">Applied</a></li>
-        <li class="nav-item"><a class="nav-link" href="interviewing.html">Interviewing</a></li>
+        <li class="nav-item"><a class="nav-link {% if url_name == 'AdminInterviewQuestion' %}active{% endif %}" href="{% url 'AdminInterviewQuestion' %}">Interview Questions</a></li>
         {% endwith %}
     </ul>
 </div>
