--- a/templates/admin/add_employee.html
+++ b/templates/admin/add_employee.html
@@ -7,9 +7,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h3 class="modal-title">Add Employee</h3>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
                 <form action="{% url 'AdminAddEmployee' %}" method="POST" id="form">
