--- a/templates/interviewer_form.html
+++ b/templates/interviewer_form.html
@@ -4,12 +4,12 @@
 {% block body %}
 		<!-- Main Wrapper -->
         <div class="main-wrapper">
-			
+
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
-			
+
                 <div class="content container-fluid">
-				
+
 					<!-- Page Header -->
 					<div class="page-header">
 						<div class="row">
@@ -19,15 +19,16 @@
 						</div>
 					</div>
 					<!-- /Page Header -->
-					
+
 					<div class="row">
 						<div class="col-lg-12">
 							<div class="card">
 								<div class="card-body">
-									 <form action="{% url 'AdminInterviewerForm' %}" method="" id="form" enctype="multipart/form-data">
+									 <form action="{% url 'AdminInterviewerForm' %}" method="POST" id="form" enctype="multipart/form-data">
+									 {% csrf_token %}
 										<div class="row">
 											<div class="col-md-4">
-												{{form.name|as_crispy_field}}
+												{{ form.name|as_crispy_field }}
 											</div>
 											<div class="col-md-4">
 												{{form.phone|as_crispy_field}}
@@ -56,8 +57,8 @@
 											<div class="col-md-4">
 												{{form.department|as_crispy_field}}
 											</div>
-											<div class="col-md-4">
-												{{form.technology|as_crispy_field}}
+											<div class="col-md-4 form-group">
+												{{ form.technology|as_crispy_field }}
 											</div>
 											<div class="col-md-4">
 												{{form.resume|as_crispy_field}}
@@ -71,10 +72,10 @@
 							</div>
 						</div>
 					</div>
-				</div>			
+				</div>
 			</div>
 			<!-- /Main Wrapper -->
-		
+
         </div>
 		<!-- /Main Wrapper -->
 {% endblock body %}
