--- a/templates/admin/aptitude_mail_template.html
+++ b/templates/admin/aptitude_mail_template.html
@@ -17,11 +17,11 @@
         <td style="text-align:center; color:#2C2727"><h3>Hello, <strong>{{username}}</strong> you are selected for aptitude test.</h3></td>
     </tr>
     <tr>
-        <td style="text-align:center; color:#2C2727;"><h4 style="margin:2rem 4rem;">Click below button to start test.<br> You have only 45 minute to complete this test after 45 minute test will automatically submit.</h4></td>
+        <td style="text-align:center; color:#2C2727;"><h4 style="margin:2rem 4rem;">Click below button to start test.<br><span style="color:red"> You have only 45 minute to complete this test after 45 minute test will automatically submit.</span></h4></td>
     </tr>
     <tr>
         <td style="text-align:center; color:#F6F4F4; padding:1rem 0rem;">
-            <a href="http://127.0.0.1:8000/hrms/interviewer/aptitude-test/{{ user_id }}" style="background-color:#3E3939; border:0; padding:1rem 5rem; border-radius: 8rem; text-decoration:none; color:#F6F4F4" title="{{ username }}">Start Test</a>
+            <a href="http://127.0.0.1:8000/hrms/interviewer/aptitude-test/{{ user_id }}/{{ technology }}" style="background-color:#3E3939; border:0; padding:1rem 5rem; border-radius: 8rem; text-decoration:none; color:#F6F4F4" title="{{ username }}">Start Test</a>
         </td>
     </tr>
     <tr>
