[Update] aptitude test functionality

--- a/templates/admin/aptitude_test.html
+++ b/templates/admin/aptitude_test.html
@@ -62,13 +62,19 @@
 					<div class="page-header">
 						<div class="row">
 							<div class="col text-center mt-5">
-								<h3 class="page-title">Aptitude Test</h3>
+								<h1 class="text-primary">Aptitude Test</h1>
 							</div>
 							<!-- Countdown Timer Section -->
 							<div style="position: fixed; top: 10px; right: 10px; color: red; font-size: 24px; mt-5 mr-5" id="countdown_timer"></div>
 						</div>
 					</div>
 					<!-- /Page Header -->
+					<div class="row">
+						<div class="col-lg-12"><h4>Name : {{interviewer_details.name}}</h4></div>
+						<div class="col-lg-12"><h4>Email : {{interviewer_details.email}}</h4></div>
+						<div class="col-lg-12"><h4>Phone : {{interviewer_details.phone}}</h4></div>
+						<div class="col-lg-12"><h4>Apply For : {{interviewer_details.department}} | {{interviewer_details.technology}}</h4></div>
+					</div>
 
 					<div class="row">
 						<div class="col-lg-12">
