--- a/templates/aptitude_test_thankyou_page.html
+++ b/templates/aptitude_test_thankyou_page.html
@@ -55,6 +55,7 @@
     <div style="margin-top:10rem;" class="text-center">
         <h1 class="text-primary display-2">Webmigrates</h1>
         <h2 class="text-secondary display-4 mt-5">Thank You.</h2>
+        <h2 class="text-secondary display-4 mt-5">You test submit successfully. Company will call soon. </h2>
     </div>
 
 
