--- a/templates/admin/navigationpanel.html
+++ b/templates/admin/navigationpanel.html
@@ -21,7 +21,7 @@
                 <li><a href="{% url 'AdminProjectsView' %}" class="{% if url_name == 'AdminProjectsView' %}text-white{% endif %}"><i class="las la-project-diagram"></i><span>Projects</span></a></li>
                 <li><a href="{% url 'AdminProjectTask' %}" class="{% if url_name == 'AdminProjectTask' %}text-white{% endif %}"><i class="las la-tasks"></i><span>Tasks</span></a></li>
 <!--                <li class="menu-title"><span>Company</span></li>-->
-                <li><a href="{% url 'AdminInterviewerDash' %}" class="{% if url_name == 'AdminInterviewerDash' %}text-white{% endif %}"><i class="las la-clone"></i><span>Interviewer</span></a></li>
+                <li><a href="{% url 'AdminInterviewerDash' %}" class="{% if url_name == 'AdminInterviewerDash' %}text-white{% elif url_name == 'AdminInterviewQuestion' %}text-white{% elif url_name == 'AdminAptitudeTestResult' %}text-white{% endif %}"><i class="las la-clone"></i><span>Interviewer</span></a></li>
                 <li><a href="{% url 'AdminInterviewerForm' %}" class="{% if url_name == 'AdminInterviewerForm' %}text-white{% endif %}"><i class="lab la-wpforms"></i><span>Interviewer Form</span></a></li>
                 <li><a href="{% url 'AdminPoliciesView' %}" class="{% if url_name == 'AdminPoliciesView' %}text-white{% endif %}"><i class="las la-file-pdf"></i><span>Policies</span></a></li>
 <!--                <li><a href="{% url 'AdminDepartmentView' %}"><span>Leads</span></a></li>-->
