--- a/templates/admin/forgot_password_email_template.html
+++ b/templates/admin/forgot_password_email_template.html
@@ -21,7 +21,7 @@
     </tr>
     <tr>
         <td style="text-align:center; color:#F6F4F4; padding:1rem 0rem;">
-            <a href="http://127.0.0.1:8000/hrms-admin/admin-password-reset/{{ user_id }}" style="background-color:#3E3939; border:0; padding:1rem 5rem; border-radius: 8rem; text-decoration:none; color:#F6F4F4" title="{{ username }}">Forgot Password</a>
+            <a href="http://{{request_url}}/hrms-admin/admin-password-reset/{{ user_id }}" style="background-color:#3E3939; border:0; padding:1rem 5rem; border-radius: 8rem; text-decoration:none; color:#F6F4F4" title="{{ username }}">Forgot Password</a>
         </td>
     </tr>
     <tr>
