--- a/templates/admin/aptitude_test.html
+++ b/templates/admin/aptitude_test.html
@@ -76,23 +76,27 @@
 						<div class="col-lg-12"><h4>Apply For : {{interviewer_details.department}} | {{interviewer_details.technology}}</h4></div>
 					</div>
 
-					<div class="row">
+					<div class="row mt-4">
 						<div class="col-lg-12">
 							<div class="card">
 								<div class="card-body">
 									 <form action="{% url 'AdminAptitudeTestData' id=interviewer_details.id %}" method="POST" id="form" enctype="multipart/form-data">
 									 {% csrf_token %}
-										<div class="table-responsive">
-											<table class="table table-nowrap table-striped mb-0">
+										<div class="table-responsive d-flex justify-content-center">
+											<table class="table table-nowrap table-striped w-50">
 												<tbody>
 													{% for question in interview_question_list %}
 													<tr class="border-bottom">
-														<td class="w-50 text-wrap"><input hidden type="text" name="question" id="option" value="{{question.question}}"> {{question.question}}</td>
+														<td class="text-wrap" colspan="2"><input hidden type="text" name="question" id="option" value="{{question.question}}"><strong>Question :</strong> {{question.question}}</td>
+														<td hidden>{{question.answer}}</td>
+													</tr>
+													<tr>
 														<td class="text-nowrap"><input type="radio" name="user_answer_{{question.id}}" id="option_a" value="{{question.option_a}}"> A. {{question.option_a}}</td>
 														<td class="text-nowrap"><input type="radio" name="user_answer_{{question.id}}" id="option_b" value="{{question.option_b}}"> B. {{question.option_b}}</td>
+													</tr>
+													<tr>
 														<td class="text-nowrap"><input type="radio" name="user_answer_{{question.id}}" id="option_c" value="{{question.option_c}}"> C. {{question.option_c}}</td>
 														<td class="text-nowrap"><input type="radio" name="user_answer_{{question.id}}" id="option_d" value="{{question.option_d}}"> D. {{question.option_d}}</td>
-														<td hidden>{{question.answer}}</td>
 													</tr>
 													{% endfor %}
 												</tbody>
