--- a/templates/admin/aptitude_test.html
+++ b/templates/admin/aptitude_test.html
@@ -87,16 +87,16 @@
 												<tbody>
 													{% for question in interview_question_list %}
 													<tr class="border-bottom">
-														<td class="text-wrap" colspan="2"><input hidden type="text" name="question" id="option" value="{{question.question}}"><strong class="mr-1">Q-{{forloop.counter}} : </strong> {{question.question}}</td>
+														<td class="text-wrap" colspan="2"><input hidden type="text" name="question" id="option" value="{{question.question}}"><strong class="mr-1">Q - {{forloop.counter}} : </strong> {{question.question}}</td>
 														<td hidden>{{question.answer}}</td>
 													</tr>
 													<tr>
-														<td class="text-nowrap"><input type="radio" name="user_answer_{{question.id}}" id="option_a" value="{{question.option_a}}" class="mr-2"> A. {{question.option_a}}</td>
-														<td class="text-nowrap"><input type="radio" name="user_answer_{{question.id}}" id="option_b" value="{{question.option_b}}" class="mr-2"> B. {{question.option_b}}</td>
+														<td class="text-nowrap"><input type="radio" name="user_answer_{{question.id}}" id="option_a" value="{{question.option_a}}" class="mr-2" required> A. {{question.option_a}}</td>
+														<td class="text-nowrap"><input type="radio" name="user_answer_{{question.id}}" id="option_b" value="{{question.option_b}}" class="mr-2" required> B. {{question.option_b}}</td>
 													</tr>
 													<tr>
-														<td class="text-nowrap"><input type="radio" name="user_answer_{{question.id}}" id="option_c" value="{{question.option_c}}" class="mr-2"> C. {{question.option_c}}</td>
-														<td class="text-nowrap"><input type="radio" name="user_answer_{{question.id}}" id="option_d" value="{{question.option_d}}" class="mr-2"> D. {{question.option_d}}</td>
+														<td class="text-nowrap"><input type="radio" name="user_answer_{{question.id}}" id="option_c" value="{{question.option_c}}" class="mr-2" required> C. {{question.option_c}}</td>
+														<td class="text-nowrap"><input type="radio" name="user_answer_{{question.id}}" id="option_d" value="{{question.option_d}}" class="mr-2" required> D. {{question.option_d}}</td>
 													</tr>
 													{% endfor %}
 												</tbody>
